// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test ButtonCounter 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
    }
  }
>
  <View
    accessibilityState={
      Object {
        "disabled": false,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "borderRadius": 6,
        "marginBottom": 10,
        "paddingBottom": 5,
        "paddingLeft": 10,
        "paddingRight": 10,
        "paddingTop": 5,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontFamily": "SourceSansPro_400Regular",
            "fontSize": 36,
          },
          Object {
            "fontFamily": "SourceSansPro_600SemiBold",
            "fontSize": 40,
            "letterSpacing": 5,
            "lineHeight": 42,
          },
        ]
      }
    >
      0
      <Text />
    </Text>
  </View>
</View>
`;

exports[`Test ButtonCounter 10 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
    }
  }
>
  <View
    accessibilityState={
      Object {
        "disabled": false,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <Text
      style={
        Object {
          "fontFamily": "SourceSansPro_400Regular",
          "fontSize": 36,
        }
      }
    >
      10
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 12,
            },
            undefined,
            Object {
              "fontFamily": "simple-line-icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </Text>
  </View>
</View>
`;

exports[`Test ButtonCounter disabled 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
    }
  }
>
  <View
    accessibilityState={
      Object {
        "disabled": true,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <Text
      style={
        Array [
          Object {
            "fontFamily": "SourceSansPro_400Regular",
            "fontSize": 36,
          },
          Array [
            Object {
              "fontFamily": "SourceSansPro_600SemiBold",
              "fontSize": 40,
              "letterSpacing": 5,
              "lineHeight": 42,
            },
            Object {
              "color": "#666",
              "fontFamily": "SourceSansPro_400Regular",
              "fontSize": 32,
            },
          ],
        ]
      }
    >
      0
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 12,
            },
            undefined,
            Object {
              "fontFamily": "simple-line-icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </Text>
  </View>
</View>
`;

exports[`Test ButtonCounter highlight 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
    }
  }
>
  <View
    accessibilityState={
      Object {
        "disabled": false,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "borderRadius": 6,
        "marginBottom": 10,
        "paddingBottom": 5,
        "paddingLeft": 10,
        "paddingRight": 10,
        "paddingTop": 5,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontFamily": "SourceSansPro_400Regular",
            "fontSize": 36,
          },
          Object {
            "fontFamily": "SourceSansPro_600SemiBold",
            "fontSize": 40,
            "letterSpacing": 5,
            "lineHeight": 42,
          },
        ]
      }
    >
      0
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 12,
            },
            undefined,
            Object {
              "fontFamily": "simple-line-icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </Text>
  </View>
</View>
`;

exports[`Test ButtonCounter highlight 10 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
    }
  }
>
  <View
    accessibilityState={
      Object {
        "disabled": false,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "borderRadius": 6,
        "marginBottom": 10,
        "paddingBottom": 5,
        "paddingLeft": 10,
        "paddingRight": 10,
        "paddingTop": 5,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontFamily": "SourceSansPro_400Regular",
            "fontSize": 36,
          },
          Object {
            "fontFamily": "SourceSansPro_600SemiBold",
            "fontSize": 40,
            "letterSpacing": 5,
            "lineHeight": 42,
          },
        ]
      }
    >
      0
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 12,
            },
            undefined,
            Object {
              "fontFamily": "simple-line-icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </Text>
  </View>
</View>
`;
